# kapsel

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  SECURITY.md  clippy.toml  codecov.yml  rustfmt.toml
.github/workflows/: ci.yml
crates/kapsel-api/src/handlers/: ingest.rs
crates/kapsel-attestation/src/: merkle.rs
crates/kapsel-attestation/tests/: merkle_trigger_test.rs
crates/kapsel-core/tests/: storage_test.rs
crates/kapsel-delivery/src/: retry.rs
crates/kapsel-delivery/tests/: engine_test.rs  retry_test.rs
crates/kapsel-dev/: Cargo.toml
crates/kapsel-dev/src/: hooks.rs  tidy.rs
crates/kapsel-gateway/: Cargo.toml
crates/kapsel-gateway/src/: gateway.rs  kind_tests.rs  lib.rs
crates/kapsel-gateway/vectors/: kap0038-receipt.hex  kap0038-receipt.sha256
crates/kapsel-kubernetes-effect-gateway/: Cargo.toml
crates/kapsel-kubernetes-effect-gateway/src/: authorization.rs  journal.rs  kind_tests.rs  kubernetes_adapter.rs  kubernetes_facts.rs  lib.rs  publication.rs  receipt.rs
crates/kapsel-kubernetes-effect-gateway/vectors/: kap0038-statement.hex
crates/kapsel-sandbox/: Cargo.toml
crates/kapsel-sandbox/src/: lib.rs  main.rs  native_listener.rs
crates/kapsel-sandbox/tests/: native_listener.rs  service_contract.rs
crates/kapsel-testing/src/: database.rs  env_core.rs
crates/kapsel-testing/tests/: scenario_test.rs  snapshots_test.rs
deploy/sandbox/: Containerfile  Containerfile.gate2-candidate  README.md  admission-fixture.json  gate1-lock.json  journal-mount-admission-rule.json  journal-volume-template.json  operator-admission-rule.json  runner-authority-composition.json  storage-composition.json  workload-template.json
docs/: ARCHITECTURE.md  BUILD.md  COMMANDS.md  EVALUATOR.md  GLOSSARY.md  INDEX.md  MCP.md  PRIVACY.md  RELEASE.md  REVIEW.md  SANDBOX_API.md  SANDBOX_DEPLOYMENT.md  SCOPE.md  STYLE.md  TESTING.md  THREAT_MODEL.md  V1.md  VISION.md
docs/decisions/: 0001-kapsel-style.md  0006-use-rust-for-the-implementation.md  0008-use-one-kubernetes-effect-gateway-canary.md  0009-use-conditional-kubernetes-image-patch.md  0010-evolve-through-a-resident-effect-gateway.md  README.md
docs/experiments/: KAP-0038-kubernetes-effect-gateway-boundary.md
docs/fixtures/sandbox-v1/: README.md  errors.json  expiry.json  healthy.json  incompatible-version.json  saturation.json  setup-failure.json  unavailable-image.json  unavailable-image.receipt.hex  unavailable-service.json
fuzz/: Cargo.toml
fuzz/corpus/inspect_receipt/: canonical-receipt-and-trust
fuzz/fuzz_targets/: inspect_receipt.rs
scripts/: assemble-release-artifact.py  check-markdown-links.py  check-rust-width.sh  ci-local.sh  demo-kind-crash-recovery.sh  smoke-release-artifact.py  test-check-markdown-links.py  test-demo-kind-crash-recovery.py  test-kind-effect-gateway.sh  test-release-artifact.py  test-release-reproducibility.py  test-sandbox-contract.py  test-sandbox-gate1.py  test-sandbox-gate2-image-candidate.sh  test-sandbox-package-boundary.py
src/: application.rs  authorization.rs  command.rs  gateway.rs  journal.rs  kind_tests.rs  kubernetes_adapter.rs  kubernetes_facts.rs  lib.rs  main.rs  mcp.rs  publication.rs  receipt.rs  simulation_tests.rs
src/application/: mod.rs
src/command/: mod.rs
src/gateway/: authorization.rs  demo_control.rs  mod.rs
src/gateway/journal/: mod.rs
src/gateway/kubernetes/: adapter.rs  facts.rs  mod.rs
src/gateway/receipt/: mod.rs  publication.rs
src/gateway/tests/: lifecycle.rs  migration.rs  mod.rs  publication.rs  receipt.rs  recovery.rs  support.rs  validation.rs
tasks/: KAP-0001.md  KAP-0002.md  KAP-0003.md  KAP-0004.md  KAP-0005.md  KAP-0006.md  KAP-0007.md  KAP-0008.md  KAP-0009.md  KAP-0010.md  KAP-0011.md  KAP-0012.md  KAP-0013.md  KAP-0014.md  KAP-0015.md  KAP-0016.md  KAP-0017.md  KAP-0018.md  KAP-0019.md  KAP-0020.md  KAP-0021.md  KAP-0022.md  KAP-0023.md  KAP-0038.md  KAP-0039.md  KAP-0040.md  KAP-0041.md  KAP-0042.md  KAP-0043.md  KAP-0044.md  KAP-0045.md  KAP-0046.md  KAP-0047.md  KAP-0048.md  KAP-0049.md  KAP-0050.md  KAP-0051.md  KAP-0052.md  KAP-0053.md  KAP-0054.md  (+1 more)
tests/: application_contract.rs  e2e_demo_recovery.rs  e2e_inspection_command.rs  e2e_mcp_adapter.rs  e2e_operation_command.rs
vectors/: kap0038-trust.hex
