[workspace]
members = ["crates/kapsel-dev", "crates/kapsel-gateway"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kapsel Contributors"]
license = "Apache-2.0"
repository = "https://github.com/mitander/kapsel"
rust-version = "1.96"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

missing_const_for_fn = "allow"
missing_enforced_import_renames = "allow"
doc_markdown = "allow"
disallowed_macros = "allow"

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

inefficient_to_string = "deny"
unnecessary_self_imports = "deny"
unused_async = "deny"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
debug = false
strip = true
codegen-units = 1
panic = "abort"
