[package]
name = "kapsel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Crash-recoverable gateway for one authorized Kubernetes Deployment image operation"
documentation = "https://docs.rs/kapsel"
homepage = "https://github.com/mitander/kapsel"
readme = "README.md"
keywords = ["agents", "kubernetes", "security", "recovery", "receipts"]
categories = ["development-tools"]
include = [
  "/src/**",
  "/vectors/**",
  "/docs/**",
  "/tasks/**",
  "/scripts/**",
  "/Makefile.toml",
  "/rust-toolchain.toml",
  "/rustfmt.toml",
  "/rustfmt-nightly.toml",
  "/clippy.toml",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/SECURITY.md",
]

[workspace]
members = ["crates/kapsel-dev"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["Kapsel Contributors"]
license = "Apache-2.0"
repository = "https://github.com/mitander/kapsel"
rust-version = "1.96"

[dependencies]
ed25519-dalek = { version = "=3.0.0", default-features = false, features = ["signature", "zeroize"] }
k8s-openapi = { version = "=0.28.0", features = ["v1_33"] }
kube = { version = "=4.0.0", default-features = false, features = ["client", "ring", "rustls-tls"] }
rusqlite = { version = "=0.40.1", features = ["bundled"] }
rustix = { version = "=1.1.4", default-features = false, features = ["fs", "process", "std"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.11.0"
tokio = { version = "=1.52.3", features = ["rt", "time"] }

[dev-dependencies]
http = "=1.4.2"
tokio = { version = "=1.52.3", features = ["macros", "rt", "time"] }
tower-test = "=0.4.0"

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
unreachable_pub = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
bare_urls = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "deny"
missing_panics_doc = "deny"

cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

missing_const_for_fn = "allow"
missing_enforced_import_renames = "allow"
redundant_pub_crate = "allow"
doc_markdown = "allow"
disallowed_macros = "allow"

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

inefficient_to_string = "deny"
unnecessary_self_imports = "deny"
unused_async = "deny"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
debug = false
strip = true
codegen-units = 1
panic = "abort"
