[package]
name = "kapsel-kubernetes-effect-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
ed25519-dalek = { version = "=3.0.0", default-features = false, features = ["signature", "zeroize"] }
k8s-openapi = { version = "=0.28.0", features = ["v1_33"] }
kube = { version = "=4.0.0", default-features = false, features = ["client", "ring", "rustls-tls"] }
rusqlite = { version = "=0.40.1", features = ["bundled"] }
rustix = { version = "=1.1.4", default-features = false, features = ["fs", "process", "std"] }
serde_json = "=1.0.150"
sha2 = "=0.11.0"
tokio = { version = "=1.52.3", features = ["time"] }

[dev-dependencies]
http = "=1.4.2"
tokio = { version = "=1.52.3", features = ["macros", "rt", "time"] }
tower-test = "=0.4.0"

[lints]
workspace = true
