[package]
name = "kapsel-sandbox"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Deterministic service package for the fixed Kapsel public sandbox"
publish = false

[dependencies]
getrandom = "=0.3.4"
http = "=1.4.2"
httparse = "=1.10.1"
kapsel = { path = "../.." }
rusqlite = { version = "=0.40.1", features = ["bundled"] }
rustix = { version = "=1.1.4", default-features = false, features = ["fs", "process", "std"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.11.0"

[dev-dependencies]
ed25519-dalek = { version = "=3.0.0", default-features = false, features = ["signature", "zeroize"] }
kube = { version = "=4.0.0", default-features = false, features = ["client", "ring", "rustls-tls"] }
tokio = { version = "=1.52.3", features = ["macros", "rt", "time"] }
tower-test = "=0.4.0"

[lints]
workspace = true
